--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 
 @article{nishijima2025fecal,
   title={Fecal microbial load is a major determinant of gut microbiome variation and a confounder for disease associations},
-  author={**_Nishijima, Suguru_** and Stankevic, Evelina and Aasmets, Oliver and Schmidt, Thomas SB and Nagata, Naoyoshi and Keller, Marisa Isabell and Ferretti, Pamela and Juel, Helene B{\ae}k and Fullam, Anthony and Robbani, Shahriyar Mahdi and others},
+  author={Nishijima, Suguru and Stankevic, Evelina and Aasmets, Oliver and Schmidt, Thomas SB and Nagata, Naoyoshi and Keller, Marisa Isabell and Ferretti, Pamela and Juel, Helene B{\ae}k and Fullam, Anthony and Robbani, Shahriyar Mahdi and others},
   journal={Cell},
   volume={188},
   number={1},
@@ -17,7 +17,7 @@
 
 @article{nishijima2022extensive,
   title={Extensive gut virome variation and its associations with host and environmental factors in a population-level cohort},
-  author={**_Nishijima*, Suguru_** and Nagata*, Naoyoshi and Kiguchi, Yuya and Kojima, Yasushi and Miyoshi-Akiyama, Tohru and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and others},
+  author={Nishijima, Suguru and Nagata, Naoyoshi and Kiguchi, Yuya and Kojima, Yasushi and Miyoshi-Akiyama, Tohru and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and others},
   journal={Nature Communications},
   volume={13},
   number={1},
