--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,26 +3,228 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{nishijima2025fecal,
-  title={Fecal microbial load is a major determinant of gut microbiome variation and a confounder for disease associations},
-  author={Nishijima, Suguru and Stankevic, Evelina and Aasmets, Oliver and Schmidt, Thomas SB and Nagata, Naoyoshi and Keller, Marisa Isabell and Ferretti, Pamela and Juel, Helene B{\ae}k and Fullam, Anthony and Robbani, Shahriyar Mahdi and others},
-  journal={Cell},
-  volume={188},
-  number={1},
-  pages={222--236},
-  year={2025},
-  publisher={Elsevier},
+@article{Nishijima_2025,
+  title = {Fecal microbial load is a major determinant of gut microbiome variation and a confounder for disease associations},
+  author = {Nishijima, Suguru and Stankevic, Evelina and Aasmets, Oliver and Schmidt, Thomas S.B. and Nagata, Naoyoshi and Keller, Marisa Isabell and Ferretti, Pamela and Juel, Helene Bæk and Fullam, Anthony and Robbani, Shahriyar Mahdi and Schudoma, Christian and Hansen, Johanne Kragh and Holm, Louise Aas and Israelsen, Mads and Schierwagen, Robert and Torp, Nikolaj and Telzerow, Anja and Hercog, Rajna and Kandels, Stefanie and Hazenbrink, Diënty H.M. and Arumugam, Manimozhiyan and Bendtsen, Flemming and Brøns, Charlotte and Fonvig, Cilius Esmann and Holm, Jens-Christian and Nielsen, Trine and Pedersen, Julie Steen and Thiele, Maja Sofie and Trebicka, Jonel and Org, Elin and Krag, Aleksander and Hansen, Torben and Kuhn, Michael and Bork, Peer},
+  journal = {Cell},
+  year = {2025},
+  volume = {188},
+  number = {1},
+  pages = {222--236.e15},
+  doi = {10.1016/j.cell.2024.10.022},
+  url = {http://dx.doi.org/10.1016/j.cell.2024.10.022},
+  publisher = {Elsevier BV},
+  month = {jan},
+  selected = {true}
+}
+
+@article{Akiyama_2024,
+  title = {Multi-biome analysis identifies distinct gut microbial signatures and their crosstalk in ulcerative colitis and Crohn’s disease},
+  author = {Akiyama, Shintaro and Nishijima, Suguru and Kojima, Yasushi and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Mizokami, Masashi and Hattori, Masahira and Tsuchiya, Kiichiro and Uemura, Naomi and Kawai, Takashi and Bork, Peer and Nagata, Naoyoshi},
+  journal = {Nature Communications},
+  year = {2024},
+  volume = {15},
+  number = {1},
+  doi = {10.1038/s41467-024-54797-8},
+  url = {http://dx.doi.org/10.1038/s41467-024-54797-8},
+  publisher = {Springer Science and Business Media LLC},
+  month = {nov},
   selected={true}
 }
 
-@article{nishijima2022extensive,
-  title={Extensive gut virome variation and its associations with host and environmental factors in a population-level cohort},
-  author={Nishijima, Suguru and Nagata, Naoyoshi and Kiguchi, Yuya and Kojima, Yasushi and Miyoshi-Akiyama, Tohru and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and others},
-  journal={Nature Communications},
-  volume={13},
-  number={1},
-  pages={5252},
-  year={2022},
-  publisher={Nature Publishing Group UK London},
+@article{Thiele_2024,
+  title = {Opportunities and barriers in omics-based biomarker discovery for steatotic liver diseases},
+  author = {Thiele, Maja and Villesen, Ida Falk and Niu, Lili and Johansen, Stine and Sulek, Karolina and Nishijima, Suguru and Espen, Lore Van and Keller, Marisa and Israelsen, Mads and Suvitaival, Tommi and de Zawadzki, Andressa and Juel, Helene Bæk and Brol, Maximilian Joseph and Stinson, Sara Elizabeth and Huang, Yun and Silva, Maria Camilla Alvarez and Kuhn, Michael and Anastasiadou, Ema and Leeming, Diana Julie and Karsdal, Morten and Matthijnssens, Jelle and Arumugam, Manimozhiyan and Dalgaard, Louise Torp and Legido-Quigley, Cristina and Mann, Matthias and Trebicka, Jonel and Bork, Peer and Jensen, Lars Juhl and Hansen, Torben and Krag, Aleksander},
+  journal = {Journal of Hepatology},
+  year = {2024},
+  volume = {81},
+  number = {2},
+  pages = {345--359},
+  doi = {10.1016/j.jhep.2024.03.035},
+  url = {http://dx.doi.org/10.1016/j.jhep.2024.03.035},
+  publisher = {Elsevier BV},
+  month = {aug}
+}
+
+@article{Thiele_2023,
+  title = {Sphingolipids Are Depleted in Alcohol-Related Liver Fibrosis},
+  author = {Thiele, Maja and Suvitaival, Tommi and Trošt, Kristina and Kim, Mijin and de Zawadzki, Andressa and Kjaergaard, Mikkel and Rasmussen, Dorte N. and Lindvig, Katrine P. and Israelsen, Mads and Detlefsen, Sören and Andersen, Peter and Juel, Helene B. and Nielsen, Trine and Georgiou, Sofia and Filippa, Valentina and Kuhn, Michael and Nishijima, Suguru and Moitinho-Silva, Luís and Rossing, Peter and Trebicka, Jonel and Anastasiadou, Ema and Bork, Peer and Hansen, Torben and Legido-Quigley, Cristina and Krag, Aleksander and Mann, Matthias and Matthijnssens, Jelle and Arumugam, Manimozhiyan and Henrar, Rob and Israelsen, Hans and Karsdal, Morten and Melberg, Hans Olav},
+  journal = {Gastroenterology},
+  year = {2023},
+  volume = {164},
+  number = {7},
+  month = {Jun},
+  pages = {1248--1260}
+}
+
+@article{Wuyts_2023,
+  title = {Consistency across multi-omics layers in a drug-perturbed gut microbial community},
+  author = {Wuyts, Sander and Alves, Renato and Zimmermann-Kogadeeva, Maria and Nishijima, Suguru and Blasche, Sonja and Driessen, Marja and Geyer, Philipp E. and Hercog, Rajna and Kartal, Ece and Maier, Lisa and Müller, Johannes B. and Garcia Santamarina, Sarela and Schmidt, Thomas Sebastian B. and Sevin, Daniel C. and Telzerow, Anja and Treit, Peter V. and Wenzel, Tobias and Typas, Athanasios and Patil, Kiran R. and Mann, Matthias and Kuhn, Michael and Bork, Peer},
+  journal = {Molecular Systems Biology},
+  year = {2023},
+  volume = {19},
+  number = {9},
+  doi = {10.15252/msb.202311525},
+  url = {http://dx.doi.org/10.15252/msb.202311525},
+  publisher = {Springer Science and Business Media LLC},
+  month = {jul}
+}
+
+@article{Nishijima_2022,
+  title = {Extensive gut virome variation and its associations with host and environmental factors in a population-level cohort},
+  author = {Nishijima, Suguru and Nagata, Naoyoshi and Kiguchi, Yuya and Kojima, Yasushi and Miyoshi-Akiyama, Tohru and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
+  journal = {Nature Communications},
+  year = {2022},
+  volume = {13},
+  number = {1},
+  doi = {10.1038/s41467-022-32832-w},
+  url = {http://dx.doi.org/10.1038/s41467-022-32832-w},
+  publisher = {Springer Science and Business Media LLC},
+  month = {sep},
+  selected={true}
+}
+
+@article{Nagata_2022a,
+  title = {Metagenomic Identification of Microbial Signatures Predicting Pancreatic Cancer From a Multinational Study},
+  author = {Nagata, Naoyoshi and Nishijima, Suguru and Kojima, Yasushi and Hisada, Yuya and Imbe, Koh and Miyoshi-Akiyama, Tohru and Suda, Wataru and Kimura, Moto and Aoki, Ryo and Sekine, Katsunori and Ohsugi, Mitsuru and Miki, Kuniko and Osawa, Tsuyoshi and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Kartal, Ece and Schmidt, Thomas S.B. and Molina-Montes, Esther and Estudillo, Lidia and Malats, Nuria and Trebicka, Jonel and Kersting, Stephan and Langheinrich, Melanie and Bork, Peer and Uemura, Naomi and Itoi, Takao and Kawai, Takashi},
+  journal = {Gastroenterology},
+  year = {2022},
+  volume = {163},
+  number = {1},
+  pages = {222--238},
+  doi = {10.1053/j.gastro.2022.03.054},
+  url = {https://doi.org/10.1053/j.gastro.2022.03.054},
+  publisher = {Elsevier BV},
+  month = {jul},
+  selected={true}
+}
+
+@article{Nagata_2022b,
+  title = {Population-level metagenomics uncovers distinct effects of multiple medications on the human gut microbiome},
+  author = {Nagata, Naoyoshi and Nishijima, Suguru and Miyoshi-Akiyama, Tohru and Kojima, Yasushi and Kimura, Moto and Aoki, Ryo and Ohsugi, Mitsuru and Ueki, Kohjiro and Miki, Kuniko and Iwata, Eri and Hayakawa, Kayoko and Ohmagari, Norio and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
+  journal = {Gastroenterology},
+  year = {2022},
+  doi = {10.1053/j.gastro.2022.06.070},
+  url = {https://doi.org/10.1053/j.gastro.2022.06.070},
+  publisher = {Elsevier BV},
+  month = {jul},
+  selected={true}
+}
+
+@article{Kiguchi_2021,
+  title = {Long-read metagenomics of multiple displacement amplified DNA of low-biomass human gut phageomes by SACRA pre-processing chimeric reads},
+  author = {Kiguchi, Yuya and Nishijima, Suguru and Kumar, Naveen and Hattori, Masahira and Suda, Wataru},
+  journal = {DNA Research},
+  year = {2021},
+  volume = {28},
+  number = {6},
+  doi = {10.1093/dnares/dsab019},
+  url = {https://doi.org/10.1093/dnares/dsab019},
+  publisher = {Oxford University Press (OUP)},
+  month = {sep}
+}
+
+@article{Sato_2020,
+  title = {Emergence of the novel aminoglycoside acetyltransferase variant Aac(6')-ib-d179y and acquisition of colistin heteroresistance in carbapenem-resistant Klebsiella pneumoniae due to a disrupting mutation in the DNA repair enzyme muts},
+  author = {Sato, Takuya and Wada, Takashi and Nishijima, Suguru and Fukushima, Yoko and Nakajima, Chie and Suzuki, Yasuhiko and Takahashi, Shinya and Yokota, Shin-Ichi},
+  journal = {mBio},
+  year = {2020},
+  volume = {11},
+  number = {6},
+  month = {dec},
+  pages = {1--14}
+}
+
+@article{Hosoda_2020,
+  title = {Revealing the microbial assemblage structure in the human gut microbiome using latent Dirichlet allocation},
+  author = {Hosoda, Shinichiro and Nishijima, Suguru and Fukunaga, Taku and Hattori, Masahira and Hamada, Michiaki},
+  journal = {Microbiome},
+  year = {2020},
+  volume = {8},
+  month = {dec},
+  number = {1}
+}
+
+@article{Ohta_2018,
+  title = {Collaborative environmental DNA sampling from petal surfaces of flowering cherry Cerasus × yedoensis 'Somei-yoshino' across the Japanese archipelago},
+  author = {Ohta, Takahiro and Kawashima, Takeshi and Shinozaki, Naoaki O. and Dobashi, Atsushi and Hiraoka, Satoshi and Hoshino, Tomohiro and Kanno, Kenta and Kataoka, Takashi and Kawashima, Sayaka and Matsui, Masaru and Nemoto, Wakana and Nishijima, Suguru and Suganuma, Naoya and Suzuki, Hiroshi and Taguchi, Y.-H. and Takenaka, Yuji and Tanigawa, Yuko and Tsuneyoshi, Masaki and Yoshitake, Keisuke and Sato, Yoshihiro and Yamashita, Ryuichiro and Arakawa, Kazuharu and Iwasaki, Wataru},
+  journal = {Journal of Plant Research},
+  year = {2018},
+  volume = {131},
+  number = {4},
+  pages = {709--717},
+  month = {jun}
+}
+
+@article{Takayasu_2017,
+  title = {Circadian oscillations of microbial and functional composition in the human salivary microbiome},
+  author = {Takayasu, Lena and Suda, Wataru and Takanashi, Kageyasu and Iioka, Erica and Kurokawa, Rina and Shindo, Chie and Hattori, Yasue and Yamashita, Naoko and Nishijima, Suguru and Oshima, Kenshiro and Hattori, Masahira},
+  journal = {DNA Research},
+  year = {2017},
+  volume = {24},
+  number = {3},
+  pages = {261--270},
+  month = {jun}
+}
+
+@article{Nishijima_2016a,
+  title = {The gut microbiome of healthy Japanese and its microbial and functional uniqueness},
+  author = {Nishijima, Suguru and Suda, Wataru and Oshima, Kenshiro and Kim, Seok-Won and Hirose, Yuu and Morita, Hidetoshi and Hattori, Masahira},
+  journal = {DNA Research},
+  year = {2016},
+  volume = {23},
+  number = {2},
+  pages = {125--133},
+  month = {mar},
+  selected={true}
+}
+
+@article{Igai_2016,
+  title = {Nitrogen fixation and nifH diversity in human gut microbiota},
+  author = {Igai, Katsura and Itakura, Manabu and Nishijima, Suguru and Tsurumaru, Hirohito and Suda, Wataru and Tsutaya, Takumi and Tomitsuka, Eriko and Tadokoro, Kiyoshi and Baba, Jun and Odani, Shingo and Natsuhara, Kazumi and Morita, Ayako and Yoneda, Minoru and Greenhill, Andrew R. and Horwood, Paul F. and Inoue, Jun-ichi and Ohkuma, Moriya and Hongoh, Yuichi and Yamamoto, Taro and Siba, Peter M. and Hattori, Masahira and Minamisawa, Kiwamu and Umezaki, Masahiro},
+  journal = {Scientific Reports},
+  year = {2016},
+  volume = {6},
+  month = {aug}
+}
+
+@article{Nagata_2019a,
+  title = {Effects of bowel preparation on the human gut microbiome and metabolome},
+  author = {Nagata, Naoyoshi and Tohya, Mari and Fukuda, Shinji and Suda, Wataru and Nishijima, Suguru and Takeuchi, Fumihiko and Ohsugi, Mitsuru and Tsujimoto, Tetsuro and Nakamura, Tomoka and Shimomura, Akira and Yanagisawa, Naohiro and Hisada, Yuya and Watanabe, Kazuhiro and Imbe, Koh and Akiyama, Junichi and Mizokami, Masashi and Miyoshi-Akiyama, Tohru and Uemura, Naomi and Hattori, Masahira},
+  journal = {Scientific Reports},
+  year = {2019},
+  volume = {9},
+  number = {1},
+  doi = {10.1038/s41598-019-40182-9},
+  url = {http://dx.doi.org/10.1038/s41598-019-40182-9},
+  publisher = {Springer Science and Business Media LLC},
+  month = {mar}
+}
+
+@article{Nagata_2019b,
+  title = {Effects of storage temperature, storage time, and Cary-Blair transport medium on the stability of the gut microbiota},
+  author = {Nagata, Naoyoshi and Tohya, Mari and Takeuchi, Fumihiko and Suda, Wataru and Nishijima, Suguru and Ohsugi, Mitsuru and Ueki, Kohjiro and Tsujimoto, Tetsuro and Nakamura, Tomoka and Kawai, Takashi and Miyoshi-Akiyama, Tohru and Uemura, Naomi and Hattori, Masahira},
+  journal = {Drug Discoveries & Therapeutics},
+  year = {2019},
+  volume = {13},
+  number = {5},
+  pages = {256--260},
+  doi = {10.5582/ddt.2019.01071},
+  url = {http://dx.doi.org/10.5582/ddt.2019.01071},
+  publisher = {IRCA-BSSA},
+  month = {oct}
+}
+
+@article{Suzuki_2019,
+  title = {Long-read metagenomic exploration of extrachromosomal mobile genetic elements in the human gut},
+  author = {Suzuki, Yoshihiko and Nishijima, Suguru and Furuta, Yoshikazu and Yoshimura, Jun and Suda, Wataru and Oshima, Kenshiro and Hattori, Masahira and Morishita, Shinichi},
+  journal = {Microbiome},
+  year = {2019},
+  volume = {7},
+  number = {1},
+  doi = {10.1186/s40168-019-0737-z},
+  url = {http://dx.doi.org/10.1186/s40168-019-0737-z},
+  publisher = {Springer Science and Business Media LLC},
+  month = {aug},
   selected={true}
 }
