--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
 
 @article{Akiyama_2024,
   title = {Multi-biome analysis identifies distinct gut microbial signatures and their crosstalk in ulcerative colitis and Crohn’s disease},
-  author = {Akiyama, Shintaro and Nishijima, Suguru and Kojima, Yasushi and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Mizokami, Masashi and Hattori, Masahira and Tsuchiya, Kiichiro and Uemura, Naomi and Kawai, Takashi and Bork, Peer and Nagata, Naoyoshi},
+  author = {Akiyama, Shintaro and Nishijima†, Suguru and Kojima, Yasushi and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Mizokami, Masashi and Hattori, Masahira and Tsuchiya, Kiichiro and Uemura, Naomi and Kawai, Takashi and Bork, Peer and Nagata, Naoyoshi},
   journal = {Nature Communications},
   year = {2024},
   volume = {15},
@@ -54,12 +54,13 @@
   volume = {164},
   number = {7},
   month = {Jun},
+  doi = {10.1053/j.gastro.2023.02.023},
   pages = {1248--1260}
 }
 
 @article{Wuyts_2023,
   title = {Consistency across multi-omics layers in a drug-perturbed gut microbial community},
-  author = {Wuyts, Sander and Alves, Renato and Zimmermann-Kogadeeva, Maria and Nishijima, Suguru and Blasche, Sonja and Driessen, Marja and Geyer, Philipp E. and Hercog, Rajna and Kartal, Ece and Maier, Lisa and Müller, Johannes B. and Garcia Santamarina, Sarela and Schmidt, Thomas Sebastian B. and Sevin, Daniel C. and Telzerow, Anja and Treit, Peter V. and Wenzel, Tobias and Typas, Athanasios and Patil, Kiran R. and Mann, Matthias and Kuhn, Michael and Bork, Peer},
+  author = {Wuyts*, Sander and Alves*, Renato and Zimmermann-Kogadeeva*, Maria and Nishijima*, Suguru and Blasche, Sonja and Driessen, Marja and Geyer, Philipp E. and Hercog, Rajna and Kartal, Ece and Maier, Lisa and Müller, Johannes B. and Garcia Santamarina, Sarela and Schmidt, Thomas Sebastian B. and Sevin, Daniel C. and Telzerow, Anja and Treit, Peter V. and Wenzel, Tobias and Typas, Athanasios and Patil, Kiran R. and Mann, Matthias and Kuhn, Michael and Bork, Peer},
   journal = {Molecular Systems Biology},
   year = {2023},
   volume = {19},
@@ -72,7 +73,7 @@
 
 @article{Nishijima_2022,
   title = {Extensive gut virome variation and its associations with host and environmental factors in a population-level cohort},
-  author = {Nishijima, Suguru and Nagata, Naoyoshi and Kiguchi, Yuya and Kojima, Yasushi and Miyoshi-Akiyama, Tohru and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
+  author = {Nishijima*, Suguru and Nagata*, Naoyoshi and Kiguchi, Yuya and Kojima, Yasushi and Miyoshi-Akiyama, Tohru and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
   journal = {Nature Communications},
   year = {2022},
   volume = {13},
@@ -86,7 +87,7 @@
 
 @article{Nagata_2022a,
   title = {Metagenomic Identification of Microbial Signatures Predicting Pancreatic Cancer From a Multinational Study},
-  author = {Nagata, Naoyoshi and Nishijima, Suguru and Kojima, Yasushi and Hisada, Yuya and Imbe, Koh and Miyoshi-Akiyama, Tohru and Suda, Wataru and Kimura, Moto and Aoki, Ryo and Sekine, Katsunori and Ohsugi, Mitsuru and Miki, Kuniko and Osawa, Tsuyoshi and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Kartal, Ece and Schmidt, Thomas S.B. and Molina-Montes, Esther and Estudillo, Lidia and Malats, Nuria and Trebicka, Jonel and Kersting, Stephan and Langheinrich, Melanie and Bork, Peer and Uemura, Naomi and Itoi, Takao and Kawai, Takashi},
+  author = {Nagata*, Naoyoshi and Nishijima*, Suguru and Kojima, Yasushi and Hisada, Yuya and Imbe, Koh and Miyoshi-Akiyama, Tohru and Suda, Wataru and Kimura, Moto and Aoki, Ryo and Sekine, Katsunori and Ohsugi, Mitsuru and Miki, Kuniko and Osawa, Tsuyoshi and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Kartal, Ece and Schmidt, Thomas S.B. and Molina-Montes, Esther and Estudillo, Lidia and Malats, Nuria and Trebicka, Jonel and Kersting, Stephan and Langheinrich, Melanie and Bork, Peer and Uemura, Naomi and Itoi, Takao and Kawai, Takashi},
   journal = {Gastroenterology},
   year = {2022},
   volume = {163},
@@ -101,7 +102,7 @@
 
 @article{Nagata_2022b,
   title = {Population-level metagenomics uncovers distinct effects of multiple medications on the human gut microbiome},
-  author = {Nagata, Naoyoshi and Nishijima, Suguru and Miyoshi-Akiyama, Tohru and Kojima, Yasushi and Kimura, Moto and Aoki, Ryo and Ohsugi, Mitsuru and Ueki, Kohjiro and Miki, Kuniko and Iwata, Eri and Hayakawa, Kayoko and Ohmagari, Norio and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
+  author = {Nagata*, Naoyoshi and Nishijima*, Suguru and Miyoshi-Akiyama, Tohru and Kojima, Yasushi and Kimura, Moto and Aoki, Ryo and Ohsugi, Mitsuru and Ueki, Kohjiro and Miki, Kuniko and Iwata, Eri and Hayakawa, Kayoko and Ohmagari, Norio and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
   journal = {Gastroenterology},
   year = {2022},
   doi = {10.1053/j.gastro.2022.06.070},
@@ -132,6 +133,7 @@
   volume = {11},
   number = {6},
   month = {dec},
+  doi = {10.1128/mBio.01954-20},
   pages = {1--14}
 }
 
@@ -142,6 +144,7 @@
   year = {2020},
   volume = {8},
   month = {dec},
+  doi = {10.1186/s40168-020-00864-3},
   number = {1}
 }
 
@@ -175,8 +178,8 @@
   volume = {23},
   number = {2},
   pages = {125--133},
-  month = {mar},
-  selected={true}
+  doi = {10.1093/dnares/dsw002},
+  month = {mar}
 }
 
 @article{Igai_2016,
@@ -185,6 +188,7 @@
   journal = {Scientific Reports},
   year = {2016},
   volume = {6},
+  doi = {10.1038/srep31942},
   month = {aug}
 }
 
@@ -217,7 +221,7 @@
 
 @article{Suzuki_2019,
   title = {Long-read metagenomic exploration of extrachromosomal mobile genetic elements in the human gut},
-  author = {Suzuki, Yoshihiko and Nishijima, Suguru and Furuta, Yoshikazu and Yoshimura, Jun and Suda, Wataru and Oshima, Kenshiro and Hattori, Masahira and Morishita, Shinichi},
+  author = {Suzuki*, Yoshihiko and Nishijima*, Suguru and Furuta, Yoshikazu and Yoshimura, Jun and Suda, Wataru and Oshima, Kenshiro and Hattori, Masahira and Morishita, Shinichi},
   journal = {Microbiome},
   year = {2019},
   volume = {7},
@@ -225,6 +229,5 @@
   doi = {10.1186/s40168-019-0737-z},
   url = {http://dx.doi.org/10.1186/s40168-019-0737-z},
   publisher = {Springer Science and Business Media LLC},
-  month = {aug},
-  selected={true}
+  month = {aug}
 }
