--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,8 +13,9 @@
   pages = {222--236.e15},
   doi = {10.1016/j.cell.2024.10.022},
   url = {http://dx.doi.org/10.1016/j.cell.2024.10.022},
-  publisher = {Elsevier BV},
   month = {jan},
+  dimensions = {true},  
+  altmetric = {true},
   selected = {true}
 }
 
@@ -27,9 +28,10 @@
   number = {1},
   doi = {10.1038/s41467-024-54797-8},
   url = {http://dx.doi.org/10.1038/s41467-024-54797-8},
-  publisher = {Springer Science and Business Media LLC},
   month = {nov},
-  selected={true}
+  dimensions = {true},    
+  altmetric = {true},
+  selected = {true}
 }
 
 @article{Thiele_2024,
@@ -42,7 +44,8 @@
   pages = {345--359},
   doi = {10.1016/j.jhep.2024.03.035},
   url = {http://dx.doi.org/10.1016/j.jhep.2024.03.035},
-  publisher = {Elsevier BV},
+  dimensions = {true},    
+  altmetric = {true},
   month = {aug}
 }
 
@@ -55,6 +58,8 @@
   number = {7},
   month = {Jun},
   doi = {10.1053/j.gastro.2023.02.023},
+  dimensions = {true},    
+  altmetric = {true},
   pages = {1248--1260}
 }
 
@@ -67,27 +72,29 @@
   number = {9},
   doi = {10.15252/msb.202311525},
   url = {http://dx.doi.org/10.15252/msb.202311525},
-  publisher = {Springer Science and Business Media LLC},
+  dimensions = {true},    
+  altmetric = {true},
   month = {jul}
 }
 
 @article{Nishijima_2022,
   title = {Extensive gut virome variation and its associations with host and environmental factors in a population-level cohort},
-  author = {Nishijima*, Suguru and Nagata*, Naoyoshi and Kiguchi, Yuya and Kojima, Yasushi and Miyoshi-Akiyama, Tohru and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
+  author = {Nishijima*†, Suguru and Nagaa*†, Naoyoshi and Kiguchi, Yuya and Kojima, Yasushi and Miyoshi-Akiyama, Tohru and Kimura, Moto and Ohsugi, Mitsuru and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
   journal = {Nature Communications},
   year = {2022},
   volume = {13},
   number = {1},
   doi = {10.1038/s41467-022-32832-w},
   url = {http://dx.doi.org/10.1038/s41467-022-32832-w},
-  publisher = {Springer Science and Business Media LLC},
   month = {sep},
-  selected={true}
+  dimensions = {true},    
+  altmetric = {true},
+  selected = {true}
 }
 
 @article{Nagata_2022a,
   title = {Metagenomic Identification of Microbial Signatures Predicting Pancreatic Cancer From a Multinational Study},
-  author = {Nagata*, Naoyoshi and Nishijima*, Suguru and Kojima, Yasushi and Hisada, Yuya and Imbe, Koh and Miyoshi-Akiyama, Tohru and Suda, Wataru and Kimura, Moto and Aoki, Ryo and Sekine, Katsunori and Ohsugi, Mitsuru and Miki, Kuniko and Osawa, Tsuyoshi and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Kartal, Ece and Schmidt, Thomas S.B. and Molina-Montes, Esther and Estudillo, Lidia and Malats, Nuria and Trebicka, Jonel and Kersting, Stephan and Langheinrich, Melanie and Bork, Peer and Uemura, Naomi and Itoi, Takao and Kawai, Takashi},
+  author = {Nagata*†, Naoyoshi and Nishijia*†, Suguru and Kojima, Yasushi and Hisada, Yuya and Imbe, Koh and Miyoshi-Akiyama, Tohru and Suda, Wataru and Kimura, Moto and Aoki, Ryo and Sekine, Katsunori and Ohsugi, Mitsuru and Miki, Kuniko and Osawa, Tsuyoshi and Ueki, Kohjiro and Oka, Shinichi and Mizokami, Masashi and Kartal, Ece and Schmidt, Thomas S.B. and Molina-Montes, Esther and Estudillo, Lidia and Malats, Nuria and Trebicka, Jonel and Kersting, Stephan and Langheinrich, Melanie and Bork, Peer and Uemura, Naomi and Itoi, Takao and Kawai, Takashi},
   journal = {Gastroenterology},
   year = {2022},
   volume = {163},
@@ -95,21 +102,23 @@
   pages = {222--238},
   doi = {10.1053/j.gastro.2022.03.054},
   url = {https://doi.org/10.1053/j.gastro.2022.03.054},
-  publisher = {Elsevier BV},
   month = {jul},
+  dimensions = {true},    
+  altmetric = {true},
   selected={true}
 }
 
 @article{Nagata_2022b,
   title = {Population-level metagenomics uncovers distinct effects of multiple medications on the human gut microbiome},
-  author = {Nagata*, Naoyoshi and Nishijima*, Suguru and Miyoshi-Akiyama, Tohru and Kojima, Yasushi and Kimura, Moto and Aoki, Ryo and Ohsugi, Mitsuru and Ueki, Kohjiro and Miki, Kuniko and Iwata, Eri and Hayakawa, Kayoko and Ohmagari, Norio and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
+  author = {Nagata*†, Naoyoshi and Nishijima*†, Suguru and Miyoshi-Akiyama, Tohru and Kojima, Yasushi and Kimura, Moto and Aoki, Ryo and Ohsugi, Mitsuru and Ueki, Kohjiro and Miki, Kuniko and Iwata, Eri and Hayakawa, Kayoko and Ohmagari, Norio and Oka, Shinichi and Mizokami, Masashi and Itoi, Takao and Kawai, Takashi and Uemura, Naomi and Hattori, Masahira},
   journal = {Gastroenterology},
   year = {2022},
   doi = {10.1053/j.gastro.2022.06.070},
   url = {https://doi.org/10.1053/j.gastro.2022.06.070},
-  publisher = {Elsevier BV},
   month = {jul},
-  selected={true}
+  dimensions = {true},    
+  altmetric = {true},  
+  selected = {true}
 }
 
 @article{Kiguchi_2021,
@@ -121,7 +130,9 @@
   number = {6},
   doi = {10.1093/dnares/dsab019},
   url = {https://doi.org/10.1093/dnares/dsab019},
-  publisher = {Oxford University Press (OUP)},
+  dimensions = {true},  
+  altmetric = {true},
+
   month = {sep}
 }
 
@@ -134,6 +145,9 @@
   number = {6},
   month = {dec},
   doi = {10.1128/mBio.01954-20},
+  dimensions = {true},    
+  altmetric = {true},
+
   pages = {1--14}
 }
 
@@ -145,65 +159,12 @@
   volume = {8},
   month = {dec},
   doi = {10.1186/s40168-020-00864-3},
+  dimensions = {true},    
+  altmetric = {true},
+
   number = {1}
 }
 
-@article{Ohta_2018,
-  title = {Collaborative environmental DNA sampling from petal surfaces of flowering cherry Cerasus × yedoensis 'Somei-yoshino' across the Japanese archipelago},
-  author = {Ohta, Takahiro and Kawashima, Takeshi and Shinozaki, Naoaki O. and Dobashi, Atsushi and Hiraoka, Satoshi and Hoshino, Tomohiro and Kanno, Kenta and Kataoka, Takashi and Kawashima, Sayaka and Matsui, Masaru and Nemoto, Wakana and Nishijima, Suguru and Suganuma, Naoya and Suzuki, Hiroshi and Taguchi, Y.-H. and Takenaka, Yuji and Tanigawa, Yuko and Tsuneyoshi, Masaki and Yoshitake, Keisuke and Sato, Yoshihiro and Yamashita, Ryuichiro and Arakawa, Kazuharu and Iwasaki, Wataru},
-  journal = {Journal of Plant Research},
-  year = {2018},
-  volume = {131},
-  number = {4},
-  pages = {709--717},
-  month = {jun}
-}
-
-@article{Takayasu_2017,
-  title = {Circadian oscillations of microbial and functional composition in the human salivary microbiome},
-  author = {Takayasu, Lena and Suda, Wataru and Takanashi, Kageyasu and Iioka, Erica and Kurokawa, Rina and Shindo, Chie and Hattori, Yasue and Yamashita, Naoko and Nishijima, Suguru and Oshima, Kenshiro and Hattori, Masahira},
-  journal = {DNA Research},
-  year = {2017},
-  volume = {24},
-  number = {3},
-  pages = {261--270},
-  month = {jun}
-}
-
-@article{Nishijima_2016a,
-  title = {The gut microbiome of healthy Japanese and its microbial and functional uniqueness},
-  author = {Nishijima, Suguru and Suda, Wataru and Oshima, Kenshiro and Kim, Seok-Won and Hirose, Yuu and Morita, Hidetoshi and Hattori, Masahira},
-  journal = {DNA Research},
-  year = {2016},
-  volume = {23},
-  number = {2},
-  pages = {125--133},
-  doi = {10.1093/dnares/dsw002},
-  month = {mar}
-}
-
-@article{Igai_2016,
-  title = {Nitrogen fixation and nifH diversity in human gut microbiota},
-  author = {Igai, Katsura and Itakura, Manabu and Nishijima, Suguru and Tsurumaru, Hirohito and Suda, Wataru and Tsutaya, Takumi and Tomitsuka, Eriko and Tadokoro, Kiyoshi and Baba, Jun and Odani, Shingo and Natsuhara, Kazumi and Morita, Ayako and Yoneda, Minoru and Greenhill, Andrew R. and Horwood, Paul F. and Inoue, Jun-ichi and Ohkuma, Moriya and Hongoh, Yuichi and Yamamoto, Taro and Siba, Peter M. and Hattori, Masahira and Minamisawa, Kiwamu and Umezaki, Masahiro},
-  journal = {Scientific Reports},
-  year = {2016},
-  volume = {6},
-  doi = {10.1038/srep31942},
-  month = {aug}
-}
-
-@article{Nagata_2019a,
-  title = {Effects of bowel preparation on the human gut microbiome and metabolome},
-  author = {Nagata, Naoyoshi and Tohya, Mari and Fukuda, Shinji and Suda, Wataru and Nishijima, Suguru and Takeuchi, Fumihiko and Ohsugi, Mitsuru and Tsujimoto, Tetsuro and Nakamura, Tomoka and Shimomura, Akira and Yanagisawa, Naohiro and Hisada, Yuya and Watanabe, Kazuhiro and Imbe, Koh and Akiyama, Junichi and Mizokami, Masashi and Miyoshi-Akiyama, Tohru and Uemura, Naomi and Hattori, Masahira},
-  journal = {Scientific Reports},
-  year = {2019},
-  volume = {9},
-  number = {1},
-  doi = {10.1038/s41598-019-40182-9},
-  url = {http://dx.doi.org/10.1038/s41598-019-40182-9},
-  publisher = {Springer Science and Business Media LLC},
-  month = {mar}
-}
 
 @article{Nagata_2019b,
   title = {Effects of storage temperature, storage time, and Cary-Blair transport medium on the stability of the gut microbiota},
@@ -215,7 +176,9 @@
   pages = {256--260},
   doi = {10.5582/ddt.2019.01071},
   url = {http://dx.doi.org/10.5582/ddt.2019.01071},
-  publisher = {IRCA-BSSA},
+  dimensions = {true},    
+  altmetric = {true},
+
   month = {oct}
 }
 
@@ -228,6 +191,78 @@
   number = {1},
   doi = {10.1186/s40168-019-0737-z},
   url = {http://dx.doi.org/10.1186/s40168-019-0737-z},
-  publisher = {Springer Science and Business Media LLC},
+  dimensions = {true},    
+  altmetric = {true},
+
   month = {aug}
+}
+
+@article{Nagata_2019a,
+  title = {Effects of bowel preparation on the human gut microbiome and metabolome},
+  author = {Nagata, Naoyoshi and Tohya, Mari and Fukuda, Shinji and Suda, Wataru and Nishijima, Suguru and Takeuchi, Fumihiko and Ohsugi, Mitsuru and Tsujimoto, Tetsuro and Nakamura, Tomoka and Shimomura, Akira and Yanagisawa, Naohiro and Hisada, Yuya and Watanabe, Kazuhiro and Imbe, Koh and Akiyama, Junichi and Mizokami, Masashi and Miyoshi-Akiyama, Tohru and Uemura, Naomi and Hattori, Masahira},
+  journal = {Scientific Reports},
+  year = {2019},
+  volume = {9},
+  number = {1},
+  doi = {10.1038/s41598-019-40182-9},
+  url = {http://dx.doi.org/10.1038/s41598-019-40182-9},
+  dimensions = {true},    
+  altmetric = {true},
+  month = {mar}
+}
+
+
+@article{Ohta_2018,
+  title = {Collaborative environmental DNA sampling from petal surfaces of flowering cherry Cerasus × yedoensis 'Somei-yoshino' across the Japanese archipelago},
+  author = {Ohta, Takahiro and Kawashima, Takeshi and Shinozaki, Naoaki O. and Dobashi, Atsushi and Hiraoka, Satoshi and Hoshino, Tomohiro and Kanno, Kenta and Kataoka, Takashi and Kawashima, Sayaka and Matsui, Masaru and Nemoto, Wakana and Nishijima, Suguru and Suganuma, Naoya and Suzuki, Hiroshi and Taguchi, Y.-H. and Takenaka, Yuji and Tanigawa, Yuko and Tsuneyoshi, Masaki and Yoshitake, Keisuke and Sato, Yoshihiro and Yamashita, Ryuichiro and Arakawa, Kazuharu and Iwasaki, Wataru},
+  journal = {Journal of Plant Research},
+  year = {2018},
+  volume = {131},
+  number = {4},
+  pages = {709--717},
+  doi = {10.1007/s10265-018-1017-x},
+  dimensions = {true},    
+  altmetric = {true},  
+  month = {jun}
+}
+
+@article{Takayasu_2017,
+  title = {Circadian oscillations of microbial and functional composition in the human salivary microbiome},
+  author = {Takayasu, Lena and Suda, Wataru and Takanashi, Kageyasu and Iioka, Erica and Kurokawa, Rina and Shindo, Chie and Hattori, Yasue and Yamashita, Naoko and Nishijima, Suguru and Oshima, Kenshiro and Hattori, Masahira},
+  journal = {DNA Research},
+  year = {2017},
+  volume = {24},
+  number = {3},
+  pages = {261--270},
+  doi = {10.1093/dnares/dsx001},
+  dimensions = {true},    
+  altmetric = {true},
+  month = {jun}
+}
+
+@article{Igai_2016,
+  title = {Nitrogen fixation and nifH diversity in human gut microbiota},
+  author = {Igai, Katsura and Itakura, Manabu and Nishijima, Suguru and Tsurumaru, Hirohito and Suda, Wataru and Tsutaya, Takumi and Tomitsuka, Eriko and Tadokoro, Kiyoshi and Baba, Jun and Odani, Shingo and Natsuhara, Kazumi and Morita, Ayako and Yoneda, Minoru and Greenhill, Andrew R. and Horwood, Paul F. and Inoue, Jun-ichi and Ohkuma, Moriya and Hongoh, Yuichi and Yamamoto, Taro and Siba, Peter M. and Hattori, Masahira and Minamisawa, Kiwamu and Umezaki, Masahiro},
+  journal = {Scientific Reports},
+  year = {2016},
+  volume = {6},
+  doi = {10.1038/srep31942},
+  dimensions = {true},    
+  altmetric = {true},
+  month = {aug}
+}
+
+
+@article{Nishijima_2016,
+  title = {The gut microbiome of healthy Japanese and its microbial and functional uniqueness},
+  author = {Nishijima, Suguru and Suda, Wataru and Oshima, Kenshiro and Kim, Seok-Won and Hirose, Yuu and Morita, Hidetoshi and Hattori, Masahira},
+  journal = {DNA Research},
+  year = {2016},
+  volume = {23},
+  number = {2},
+  pages = {125--133},
+  doi = {10.1093/dnares/dsw002},
+  dimensions = {true},    
+  altmetric = {true},
+  month = {mar}
 }
