--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,7 @@
   month = {jan},
   dimensions = {true},  
   altmetric = {true},
+  highlight = {https://www.embl.org/news/science-technology/microbial-load-can-influence-disease-associations/},  
   selected = {true}
 }
 
@@ -31,6 +32,7 @@
   month = {nov},
   dimensions = {true},    
   altmetric = {true},
+  press_jp = {https://www.tokyo-med.ac.jp/news/2024/1129_140000003560.html},
   selected = {true}
 }
 
@@ -86,6 +88,7 @@
   number = {1},
   doi = {10.1038/s41467-022-32832-w},
   url = {http://dx.doi.org/10.1038/s41467-022-32832-w},
+  press_jp = {https://www.waseda.jp/top/news/83864/},
   month = {sep},
   dimensions = {true},    
   altmetric = {true},
@@ -102,7 +105,8 @@
   pages = {222--238},
   doi = {10.1053/j.gastro.2022.03.054},
   url = {https://doi.org/10.1053/j.gastro.2022.03.054},
-  month = {jul},
+  press_jp = {https://www.tokyo-med.ac.jp/news/20220419pressrelease.pdf},
+  month = {mar},
   dimensions = {true},    
   altmetric = {true},
   selected={true}
@@ -116,6 +120,7 @@
   doi = {10.1053/j.gastro.2022.06.070},
   url = {https://doi.org/10.1053/j.gastro.2022.06.070},
   month = {jul},
+  press_jp = {https://www.tokyo-med.ac.jp/news/20220720pressrelease.pdf},
   dimensions = {true},    
   altmetric = {true},  
   selected = {true}
@@ -159,6 +164,7 @@
   volume = {8},
   month = {dec},
   doi = {10.1186/s40168-020-00864-3},
+  press_jp = {https://www.waseda.jp/top/news/69510},
   dimensions = {true},    
   altmetric = {true},
 
@@ -193,7 +199,6 @@
   url = {http://dx.doi.org/10.1186/s40168-019-0737-z},
   dimensions = {true},    
   altmetric = {true},
-
   month = {aug}
 }
 
@@ -262,6 +267,7 @@
   number = {2},
   pages = {125--133},
   doi = {10.1093/dnares/dsw002},
+  press_jp = {https://www.waseda.jp/top/news/39021},
   dimensions = {true},    
   altmetric = {true},
   month = {mar}
